--- a/WebContent/Index.html
+++ b/WebContent/Index.html
@@ -72,7 +72,7 @@
             <div class="w3-section w3-container w3-card-4 w3-baemint">
                 <!-- 1 main content start here!!!----------------------------------------------------------- -->
 
-                <h1 class="w3-section">배달의 인종</h1>
+                <h1 class="w3-section">배다른 민족</h1>
 
                 <div class="tab">
                     <button id="btn1" class="tablinks" onclick="clientFormOpen()">사용자</button>
