--- a/WebContent/Index.html
+++ b/WebContent/Index.html
@@ -82,10 +82,10 @@
                 <div id="tab1" class="tabcontent">
                     <form action="./member/LoginClientPro.jsp" method="POST" name="LoginFormClient">
                         <br>
-                        <label>아이디</label>
+                        <label class="w3-left">아이디</label>
                         <input type="text" class="w3-input" name="id" id="id">
                         <br>
-                        <label>비밀번호</label>
+                        <label class="w3-left">비밀번호</label>
                         <input type="password" class="w3-input" name="pw" id="pw">
                         <br>
                         <div class="grid w3-section">
@@ -98,10 +98,10 @@
                 <div id="tab2" class="tabcontent">
                     <form action="./member/LoginShopPro.jsp" method="POST" name="LoginFormShop">
                         <br>
-                        <label>아이디</label>
+                        <label class="w3-left">아이디</label>
                         <input type="text" class="w3-input" name="id" id="id">
                         <br>
-                        <label>비밀번호</label>
+                        <label class="w3-left">비밀번호</label>
                         <input type="password" class="w3-input" name="pw" id="pw">
                         <br>
                         <div class="grid w3-section">
