--- a/WebContent/baemin/sw02_ShopList.html
+++ b/WebContent/baemin/sw02_ShopList.html
@@ -56,15 +56,16 @@
 
                 <!-- 반복시작 -->
                 <div class="w3-panel w3-border-top w3-border-bottom" style="margin: 0px;" onclick="go2Shop(this)">
-                    <div class="w3-row">
+                    <div class="w3-row w3-section">
                         <div class="w3-col w3-right" style="width: 55px;"><i class="material-icons"
                                 style="color: orange;">star</i><strong>4.5</strong></div>
                         <div class="w3-rest">
-                            <h6>가게이름이이렇게길지않기를</h6> <input type="text" class="no" value="3" />
+                            <h6>가게이름이이렇게길지않기를</h6> <input type="hidden" class="no" value="3" />
                         </div>
                     </div>
-                    <p>가게주소가게주소가게주소가게주소</p>
-                    <div style="white-space:pre;">가게설명가게설명가게설명가게<br>설명가게설명가게설명가게설명가게설명가게설명
+                    <div class="w3-section">
+                        <p>가게주소가게주소가게주소가게주소</p>
+                        <div class="">돈까스, 일식, 한식</div>
                     </div>
                 </div>
                 <!-- 반복 끝 -->
