Auto stash before merge of "master" and "swsw1005/master"
123

--- a/WebContent/Index.html
+++ b/WebContent/Index.html
@@ -80,7 +80,7 @@
                 </div>
 
                 <div id="tab1" class="tabcontent">
-                    <form action="./member/LoginClientPro.jsp" method="POST" name="LoginFormClient">
+                    <form action="./memberClient/LoginClientPro.jsp" method="POST" name="LoginFormClient">
                         <br>
                         <label class="w3-left">아이디</label>
                         <input type="text" class="w3-input" name="id" id="id">
@@ -90,13 +90,13 @@
                         <br>
                         <div class="grid w3-section">
                             <button class="w3-button w3-baemint w3-border" type="submit">로그인</button>
-                            <button class="w3-button w3-baemint w3-border" type="button">회원가입</button>
+                            <button class="w3-button w3-baemint w3-border" type="button" onClick="location.href='./memberClient/JoinFormCilent.jsp'">회원가입</button>
                         </div>
                     </form>
                 </div>
 
                 <div id="tab2" class="tabcontent">
-                    <form action="./member/LoginShopPro.jsp" method="POST" name="LoginFormShop">
+                    <form action="./memberShop/LoginShopPro.jsp" method="POST" name="LoginFormShop">
                         <br>
                         <label class="w3-left">아이디</label>
                         <input type="text" class="w3-input" name="id" id="id">
@@ -106,7 +106,7 @@
                         <br>
                         <div class="grid w3-section">
                             <button class="w3-button w3-baemint w3-border" type="submit">사장님 로그인</button>
-                            <button class="w3-button w3-baemint w3-border" type="button">가맹점 가입</button>
+                            <button class="w3-button w3-baemint w3-border" type="button" onClick="location.href='./memberShop/JoinFormShop.jsp'">가맹점 가입</button>
                         </div>
                     </form>
                 </div>
