--- a/WebContent/baemin/sw01_Main.html
+++ b/WebContent/baemin/sw01_Main.html
@@ -50,7 +50,7 @@
     <div class="sw-center">
         <!-- 가로복 제한 400~1200 ---------------------------------------------------------------------------------->
         <!-- 400~1200 사이로 조절 가능 ---------------------------------------------------------------------------------->
-        <div class="sw-container-400">
+        <div class="sw-container-500">
             <div class="w3-row w3-section">
                 <!--  main content start here!!!----------------------------------------------------------- -->
                 <div class="w3-col w3-right" style="width:60px">
@@ -111,43 +111,43 @@
             <div class="w3-container">
                 <!--  main content start here!!!----------------------------------------------------------- -->
                 <div class="w3-row">
-                    <div class="w3-third s3 m2 w3-center w3-padding">
-                        <img src="../source/img/hansik.png" alt="">
+                    <div class="w3-quarter w3-center w3-padding">
+                        <img src="../source/img/hansik.png" alt="한식" max-width="110px">
                         <div>한식</div>
                     </div>
                     <!-- .... -->
-                    <div class="w3-third s3 m2 w3-center w3-padding">
-                        <img src="../source/img/yangsik.png" alt="">
+                    <div class="w3-quarter w3-center w3-padding">
+                        <img src="../source/img/yangsik.png" alt="양식" max-width="110px">
                         <div>양식</div>
                     </div>
                     <!-- .... -->
-                    <div class="w3-third s3 m2 w3-center w3-padding">
-                        <img src="../source/img/jungsik.png" alt="">
+                    <div class="w3-quarter w3-center w3-padding">
+                        <img src="../source/img/jungsik.png" alt="중식" max-width="110px">
                         <div>중식</div>
                     </div>
                     <!-- .... -->
-                    <div class="w3-third s3 m2 w3-center w3-padding">
-                        <img src="../source/img/ilsik.png" alt="">
+                    <div class="w3-quarter w3-center w3-padding">
+                        <img src="../source/img/ilsik.png" alt="일식" max-width="110px">
                         <div>일식</div>
                     </div>
                     <!-- .... -->
-                    <div class="w3-third s3 m2 w3-center w3-padding">
-                        <img src="../source/img/pizza.png" alt="">
+                    <div class="w3-quarter w3-center w3-padding">
+                        <img src="../source/img/pizza.png" alt="피자" max-width="110px">
                         <div>피자</div>
                     </div>
                     <!-- .... -->
-                    <div class="w3-third s3 m2 w3-center w3-padding">
-                        <img src="../source/img/chicken.png" alt="">
+                    <div class="w3-quarter w3-center w3-padding">
+                        <img src="../source/img/chicken.png" alt="치킨" max-width="110px">
                         <div>치킨</div>
                     </div>
                     <!-- .... -->
-                    <div class="w3-third s3 m2 w3-center w3-padding">
-                        <img src="../source/img/fastfood.png" alt="">
-                        <div>패스트푸드</div>
+                    <div class="w3-quarter w3-center w3-padding">
+                        <img src="../source/img/fastfood.png" alt="햄버거" max-width="110px">
+                        <div>햄버거</div>
                     </div>
                     <!-- .... -->
-                    <div class="w3-third s3 m2 w3-center w3-padding">
-                        <img src="../source/img/cafe.png" alt="">
+                    <div class="w3-quarter w3-center w3-padding">
+                        <img src="../source/img/cafe.png" alt="카페" max-width="110px">
                         <div>카페</div>
                     </div>
                     <!-- .... -->
