--- a/WebContent/baemin/sw01_Main.html
+++ b/WebContent/baemin/sw01_Main.html
@@ -23,6 +23,11 @@
         .mySlides {
             display: none;
         }
+
+        #juso {
+            font-size: 90%;
+            height: 40px;
+        }
     </style>
     <script>
         function openDaumPostcode() {
@@ -33,7 +38,7 @@
                 }
 
             }).open();
-        }//openDaumPostcode()---
+        } //openDaumPostcode()---
     </script>
 
 </head>
@@ -50,8 +55,8 @@
     <div class="sw-center">
         <!-- 가로복 제한 400~1200 ---------------------------------------------------------------------------------->
         <!-- 400~1200 사이로 조절 가능 ---------------------------------------------------------------------------------->
-        <div class="sw-container-500">
-            <div class="w3-row w3-section">
+        <div class="sw-container-500 w3-padding">
+            <div class="w3-row">
                 <!--  main content start here!!!----------------------------------------------------------- -->
                 <div class="w3-col w3-right" style="width:60px">
                     &nbsp;
@@ -59,9 +64,8 @@
                 </div>
 
                 <div class="w3-rest">
-                    <input id="juso" class="w3-input w3-border w3-round-large" value="서울 구로중앙테스트테스트테스트45-14">
+                    <input id="juso" class="w3-input w3-border w3-round-large" value="서울 영등포구 국회대로36길 17">
                 </div>
-
             </div>
         </div>
 
@@ -97,7 +101,9 @@
                     x[i].style.display = "none";
                 }
                 myIndex++;
-                if (myIndex > x.length) { myIndex = 1 }
+                if (myIndex > x.length) {
+                    myIndex = 1
+                }
                 x[myIndex - 1].style.display = "block";
                 setTimeout(carousel, 2000); // Change image every 2 seconds
             }
@@ -111,88 +117,98 @@
             <div class="w3-container">
                 <!--  main content start here!!!----------------------------------------------------------- -->
                 <div class="w3-row">
-                    <div class="w3-quarter w3-center w3-padding">
-                        <img src="../source/img/hansik.png" alt="한식" max-width="110px">
-                        <div>한식</div>
+                    <div class="w3-col s3 w3-center w3-padding">
+                        <img src="../source/img/hansik.png" alt="한식" max-width="110px"> <input type="hidden" value="한식" />
                     </div>
                     <!-- .... -->
-                    <div class="w3-quarter w3-center w3-padding">
-                        <img src="../source/img/yangsik.png" alt="양식" max-width="110px">
-                        <div>양식</div>
+                    <div class="w3-col s3 w3-center w3-padding">
+                        <img src="../source/img/yangsik.png" alt="양식" max-width="110px"> <input type="hidden" value="양식" />
                     </div>
                     <!-- .... -->
-                    <div class="w3-quarter w3-center w3-padding">
-                        <img src="../source/img/jungsik.png" alt="중식" max-width="110px">
-                        <div>중식</div>
+                    <div class="w3-col s3 w3-center w3-padding">
+                        <img src="../source/img/jungsik.png" alt="중식" max-width="110px"> <input type="hidden" value="중식" />
                     </div>
                     <!-- .... -->
-                    <div class="w3-quarter w3-center w3-padding">
-                        <img src="../source/img/ilsik.png" alt="일식" max-width="110px">
-                        <div>일식</div>
+                    <div class="w3-col s3 w3-center w3-padding">
+                        <img src="../source/img/ilsik.png" alt="일식" max-width="110px"> <input type="hidden" value="일식" />
                     </div>
-                    <!-- .... -->
-                    <div class="w3-quarter w3-center w3-padding">
-                        <img src="../source/img/pizza.png" alt="피자" max-width="110px">
-                        <div>피자</div>
-                    </div>
-                    <!-- .... -->
-                    <div class="w3-quarter w3-center w3-padding">
-                        <img src="../source/img/chicken.png" alt="치킨" max-width="110px">
-                        <div>치킨</div>
-                    </div>
-                    <!-- .... -->
-                    <div class="w3-quarter w3-center w3-padding">
-                        <img src="../source/img/fastfood.png" alt="햄버거" max-width="110px">
-                        <div>햄버거</div>
-                    </div>
-                    <!-- .... -->
-                    <div class="w3-quarter w3-center w3-padding">
-                        <img src="../source/img/cafe.png" alt="카페" max-width="110px">
-                        <div>카페</div>
-                    </div>
-                    <!-- .... -->
                 </div>
-                <!-- main content end----------------------------------------------------------------------- -->
+
+                <div class="w3-row">
+                    <div class="w3-col s3 w3-center">한식</div>
+                    <div class="w3-col s3 w3-center">양식</div>
+                    <div class="w3-col s3 w3-center">중식</div>
+                    <div class="w3-col s3 w3-center">일식</div>
+                </div>
+
+                <div class="w3-row">
+                    <!-- .... -->
+                    <div class="w3-col s3 w3-center w3-padding">
+                        <img src="../source/img/pizza.png" alt="피자" max-width="110px"> <input type="hidden" value="피자" />
+                    </div>
+                    <!-- .... -->
+                    <div class="w3-col s3 w3-center w3-padding">
+                        <img src="../source/img/chicken.png" alt="치킨" max-width="110px"> <input type="hidden" value="치킨" />
+                    </div>
+                    <!-- .... -->
+                    <div class="w3-col s3 w3-center w3-padding">
+                        <img src="../source/img/fastfood.png" alt="햄버거" max-width="110px"> <input type="hidden" value="패스트푸드" />
+                    </div>
+                    <!-- .... -->
+                    <div class="w3-col s3 w3-center w3-padding">
+                        <img src="../source/img/cafe.png" alt="카페" max-width="110px"> <input type="hidden" value="카페" />
+                    </div>
+                </div>
+
+                <div class="w3-row">
+                    <div class="w3-col s3 w3-center">피자</div>
+                    <div class="w3-col s3 w3-center">치킨</div>
+                    <div class="w3-col s3 w3-center">햄버거</div>
+                    <div class="w3-col s3 w3-center">카페</div>
+                </div>
+
+
+                <!-- .... -->
             </div>
+            <!-- main content end----------------------------------------------------------------------- -->
         </div>
-    </div>
-    <!-- main content end----------------------------------------------------------------------- -->
+        <!-- main content end----------------------------------------------------------------------- -->
 
 
-    <!-- HEAD ------------------------------------------------------------------------------------ -->
-    <!-- head가 맨 나중?나중에 나온 요소가 레이어 맨위로... ---------------------------------------->
-    <div class="topnav w3-card-4" id="topNav">
-        <a href="#" class="w3-baemint active">배달의 인종 </a>
-        <!-- -------------------------------------------------------------------------- -->
-        <a> <strong>aaaa</strong>님 환영합니다.
-        </a>
-        <!-- -------------------------------------------------------------------------- -->
-        <a href="#">마이페이지</a>
-        <!-- -------------------------------------------------------------------------- -->
-        <a href="https://ceo.baemin.com/guide/detail/G73002">내 주문</a>
-        <!-- -------------------------------------------------------------------------- -->
-        <a href="#">로그아웃</a>
-        <!-- -------------------------------------------------------------------------- -->
-        <a href="javascript:void(0);" class="icon" onclick="responsiveMenuPopUp()"> <i class="fa fa-bars"></i>
-        </a>
-    </div>
+        <!-- HEAD ------------------------------------------------------------------------------------ -->
+        <!-- head가 맨 나중?나중에 나온 요소가 레이어 맨위로... ---------------------------------------->
+        <div class="topnav w3-card-4" id="topNav">
+            <a href="#" class="w3-baemint">배달의 인종 </a>
+            <!-- -------------------------------------------------------------------------- -->
+            <a> <strong>aaaa</strong>님 환영합니다.
+            </a>
+            <!-- -------------------------------------------------------------------------- -->
+            <a href="#">마이페이지</a>
+            <!-- -------------------------------------------------------------------------- -->
+            <a href="https://ceo.baemin.com/guide/detail/G73002">내 주문</a>
+            <!-- -------------------------------------------------------------------------- -->
+            <a href="#">로그아웃</a>
+            <!-- -------------------------------------------------------------------------- -->
+            <a href="javascript:void(0);" class="icon" onclick="responsiveMenuPopUp()"> <i class="fa fa-bars"></i>
+            </a>
+        </div>
 
-    <script>
-        /* Toggle between adding and removing the "responsive" class to topnav when the user clicks on the icon */
-        function responsiveMenuPopUp() {
-            var x = document.getElementById("topNav");
-            if (x.className === "topnav w3-card-4") {
-                x.className += " responsive";
-            } else {
+        <script>
+            /* Toggle between adding and removing the "responsive" class to topnav when the user clicks on the icon */
+            function responsiveMenuPopUp() {
+                var x = document.getElementById("topNav");
+                if (x.className === "topnav w3-card-4") {
+                    x.className += " responsive";
+                } else {
+                    x.className = "topnav w3-card-4";
+                }
+            }
+
+            window.onresize = function () {
+                var x = document.getElementById("topNav");
                 x.className = "topnav w3-card-4";
             }
-        }
-
-        window.onresize = function () {
-            var x = document.getElementById("topNav");
-            x.className = "topnav w3-card-4";
-        }
-    </script>
+        </script>
 
 
 </body>
