--- a/WebContent/baemin/sw01_Main.html
+++ b/WebContent/baemin/sw01_Main.html
@@ -14,6 +14,9 @@
     <link rel="stylesheet" href="../sw_css/sw-1.0.0.css">
     <!-- CDN - daum zipCode -->
     <script src="http://dmaps.daum.net/map_js_init/postcode.v2.js"></script>
+    <!-- CDN - jquery 3.4.1 -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
 
     <style>
         img {
@@ -24,9 +27,8 @@
             display: none;
         }
 
-        #juso {
-            font-size: 90%;
-            height: 40px;
+        .font-80 {
+            font-size: 80%;
         }
     </style>
     <script>
@@ -34,7 +36,7 @@
 
             new daum.Postcode({
                 oncomplete: function (data) {
-                    document.getElementById('juso').value = data.address;
+                    document.getElementById('addr').value = data.address;
                 }
 
             }).open();
@@ -60,12 +62,18 @@
                 <!--  main content start here!!!----------------------------------------------------------- -->
                 <div class="w3-col w3-right" style="width:60px">
                     &nbsp;
-                    <button class="w3-button w3-circle w3-white w3-border" onclick="openDaumPostcode()">+</button>
+                    <button class="w3-button w3-circle w3-white w3-border" onclick="jusoChangeOpen()">+</button>
                 </div>
 
                 <div class="w3-rest">
                     <input id="juso" class="w3-input w3-border w3-round-large" value="서울 영등포구 국회대로36길 17">
+                    1. div로 표기. 버튼 따로없이 주소를 클릭하면 모달창 열기??
                 </div>
+            </div>
+            <div class="w3-row w3-center">
+                <button type="button" class="w3-button w3-white w3-center font-80"><span id="addr_result">서울 영등포구 국회대로36길 17</span>
+                    &nbsp;<span id="addr2_result">B동 401호</span>
+                </button>
             </div>
         </div>
 
@@ -117,19 +125,19 @@
             <div class="w3-container">
                 <!--  main content start here!!!----------------------------------------------------------- -->
                 <div class="w3-row">
-                    <div class="w3-col s3 w3-center w3-padding">
+                    <div class="w3-col s3 w3-center w3-padding" onclick="go2ShopList(this)">
                         <img src="../source/img/hansik.png" alt="한식" max-width="110px"> <input type="hidden" value="한식" />
                     </div>
                     <!-- .... -->
-                    <div class="w3-col s3 w3-center w3-padding">
+                    <div class="w3-col s3 w3-center w3-padding" onclick="go2ShopList(this)">
                         <img src="../source/img/yangsik.png" alt="양식" max-width="110px"> <input type="hidden" value="양식" />
                     </div>
                     <!-- .... -->
-                    <div class="w3-col s3 w3-center w3-padding">
+                    <div class="w3-col s3 w3-center w3-padding" onclick="go2ShopList(this)">
                         <img src="../source/img/jungsik.png" alt="중식" max-width="110px"> <input type="hidden" value="중식" />
                     </div>
                     <!-- .... -->
-                    <div class="w3-col s3 w3-center w3-padding">
+                    <div class="w3-col s3 w3-center w3-padding" onclick="go2ShopList(this)">
                         <img src="../source/img/ilsik.png" alt="일식" max-width="110px"> <input type="hidden" value="일식" />
                     </div>
                 </div>
@@ -143,19 +151,19 @@
 
                 <div class="w3-row">
                     <!-- .... -->
-                    <div class="w3-col s3 w3-center w3-padding">
+                    <div class="w3-col s3 w3-center w3-padding" onclick="go2ShopList(this)">
                         <img src="../source/img/pizza.png" alt="피자" max-width="110px"> <input type="hidden" value="피자" />
                     </div>
                     <!-- .... -->
-                    <div class="w3-col s3 w3-center w3-padding">
+                    <div class="w3-col s3 w3-center w3-padding" onclick="go2ShopList(this)">
                         <img src="../source/img/chicken.png" alt="치킨" max-width="110px"> <input type="hidden" value="치킨" />
                     </div>
                     <!-- .... -->
-                    <div class="w3-col s3 w3-center w3-padding">
+                    <div class="w3-col s3 w3-center w3-padding" onclick="go2ShopList(this)">
                         <img src="../source/img/fastfood.png" alt="햄버거" max-width="110px"> <input type="hidden" value="패스트푸드" />
                     </div>
                     <!-- .... -->
-                    <div class="w3-col s3 w3-center w3-padding">
+                    <div class="w3-col s3 w3-center w3-padding" onclick="go2ShopList(this)">
                         <img src="../source/img/cafe.png" alt="카페" max-width="110px"> <input type="hidden" value="카페" />
                     </div>
                 </div>
@@ -166,49 +174,117 @@
                     <div class="w3-col s3 w3-center">햄버거</div>
                     <div class="w3-col s3 w3-center">카페</div>
                 </div>
-
-
                 <!-- .... -->
             </div>
             <!-- main content end----------------------------------------------------------------------- -->
         </div>
         <!-- main content end----------------------------------------------------------------------- -->
+    </div>
+    <script>
+        function go2ShopList(e) {
+            var a1 = e.children[1].value;
+            console.log(a1);
+            loaction.href = "ShopList.jsp?catogory=" + a1;
+        }
+    </script>
 
 
-        <!-- HEAD ------------------------------------------------------------------------------------ -->
-        <!-- head가 맨 나중?나중에 나온 요소가 레이어 맨위로... ---------------------------------------->
-        <div class="topnav w3-card-4" id="topNav">
-            <a href="#" class="w3-baemint">배달의 인종 </a>
-            <!-- -------------------------------------------------------------------------- -->
-            <a> <strong>aaaa</strong>님 환영합니다.
-            </a>
-            <!-- -------------------------------------------------------------------------- -->
-            <a href="#">마이페이지</a>
-            <!-- -------------------------------------------------------------------------- -->
-            <a href="https://ceo.baemin.com/guide/detail/G73002">내 주문</a>
-            <!-- -------------------------------------------------------------------------- -->
-            <a href="#">로그아웃</a>
-            <!-- -------------------------------------------------------------------------- -->
-            <a href="javascript:void(0);" class="icon" onclick="responsiveMenuPopUp()"> <i class="fa fa-bars"></i>
-            </a>
+    <!-- The Modal //////////////////////////////////////////////-->
+    <div id="jusoChange" class="w3-modal">
+        <div class="w3-modal-content w3-round-large">
+            <div class="w3-container w3-center">
+                <div class="w3-row w3-section"> <label>주소</label> </div>
+                <div class="w3-row w3-center"> <input class="w3-input w3-border" type="text" name="addr" id="addr" readonly> </div>
+                <div class="w3-row w3-section"> <label>상세주소</label> </div>
+                <div class="w3-row w3-center"> <input class="w3-input w3-border" type="text" name="addr2" id="addr2"> </div>
+                <div class="w3-row w3-section w3-center">
+                    <button class="w3-button w3-baemint" type="button" onclick="openDaumPostcode()" style="width: 100px;">주소입력</button>
+                    <button class="w3-button w3-baemint" type="button" onclick="updateJuso()" style="width: 100px;">주소변경</button>
+                </div>
+                <span onclick="document.getElementById('jusoChange').style.display='none'"
+                    class="w3-button w3-display-topright">&times;</span>
+            </div>
         </div>
+    </div>
+    <!-- The Modal //////////////////////////////////////////////-->
+    <script>
+        function jusoChangeOpen() {
+            document.getElementById('jusoChange').style.display = 'block';
+        }
 
-        <script>
-            /* Toggle between adding and removing the "responsive" class to topnav when the user clicks on the icon */
-            function responsiveMenuPopUp() {
-                var x = document.getElementById("topNav");
-                if (x.className === "topnav w3-card-4") {
-                    x.className += " responsive";
-                } else {
-                    x.className = "topnav w3-card-4";
-                }
+        function updateJuso() {
+            var addr = document.getElementById("addr").value;
+            var addr2 = document.getElementById("addr2").value;
+            console.log("--------" + addr + " " + addr2);
+            // JSON 데이터로 만들기
+            var reply = {
+                // 항목이름 : 값(변수)
+                addr: addr,
+                addr2: addr2
             }
+            var url = "UpdateJuso.jsp";
+            // ajax(비동기 통신)를 통해서 post방식의 입력한 데이터를 서버에 넘기기
+            $.ajax({
+                type: "get",
+                url: url,
+                data: reply,
+                // 리턴 되어 돌려 받는 데이터의 타입
+                dataType: "text",
+                // 기본값이므로 삭제 가능
+                success: function (result, status, xhr) {
+                    console.log("result=" + result);
+                    console.log("status=" + status);
+                    var isIDOK = result.trim() + "";
+                    console.log("isIDOK=" + isIDOK);
+                    if (isIDOK == "yes") {
+                        hasIDCheck = 1;
+                    } else {
+                        hasIDCheck = 0;
+                    }
+                },
+                error: function (xhr, status, error) {
+                    alert(xhr + "/" + status + "/" + error);
+                } // error의 끝
+            }); // ajax의 끝
+        }
+    </script>
 
-            window.onresize = function () {
-                var x = document.getElementById("topNav");
+
+
+    <!-- HEAD ------------------------------------------------------------------------------------ -->
+    <!-- head가 맨 나중?나중에 나온 요소가 레이어 맨위로... ---------------------------------------->
+    <div class="topnav w3-card-4" id="topNav">
+        <a href="#" class="w3-baemint">배달의 인종 </a>
+        <!-- -------------------------------------------------------------------------- -->
+        <a> <strong>aaaa</strong>님 환영합니다.
+        </a>
+        <!-- -------------------------------------------------------------------------- -->
+        <a href="#">마이페이지</a>
+        <!-- -------------------------------------------------------------------------- -->
+        <a href="https://ceo.baemin.com/guide/detail/G73002">내 주문</a>
+        <!-- -------------------------------------------------------------------------- -->
+        <a href="#">로그아웃</a>
+        <!-- -------------------------------------------------------------------------- -->
+        <a href="javascript:void(0);" class="icon" onclick="responsiveMenuPopUp()"> <i class="fa fa-bars"></i>
+        </a>
+    </div>
+
+    <script>
+        /* Toggle between adding and removing the "responsive" class to topnav when the user clicks on the icon */
+        function responsiveMenuPopUp() {
+            var x = document.getElementById("topNav");
+            if (x.className === "topnav w3-card-4") {
+                x.className += " responsive";
+            } else {
                 x.className = "topnav w3-card-4";
             }
-        </script>
+        }
+
+        window.onresize = function () {
+            var x = document.getElementById("topNav");
+            x.className = "topnav w3-card-4";
+        }
+    </script>
 
 
 </body>
