--- a/WebContent/baemin/sw02_ShopList.html
+++ b/WebContent/baemin/sw02_ShopList.html
@@ -55,7 +55,7 @@
                 </script>
 
                 <!-- 반복시작 -->
-                <div class="w3-panel w3-border-top w3-border-bottom" style="margin: 0px;" onclick="go2Shop(this)">
+                <div class="w3-panel w3-border-bottom" style="margin: 0px;" onclick="go2Shop(this)">
                     <div class="w3-row w3-section">
                         <div class="w3-col w3-right" style="width: 55px;"><i class="material-icons"
                                 style="color: orange;">star</i><strong>4.5</strong></div>
