--- a/WebContent/Index.html
+++ b/WebContent/Index.html
@@ -12,6 +12,11 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
     <style>
+        * {
+            font-family: baemin_font;
+            font-size: 105%;
+        }
+
         body {
             text-align: center;
             font-family: Arial;
@@ -72,7 +77,7 @@
             <div class="w3-section w3-container w3-card-4 w3-baemint">
                 <!-- 1 main content start here!!!----------------------------------------------------------- -->
 
-                <h1 class="w3-section">배다른 민족</h1>
+                <h1 class="w3-section">베달의 민족</h1>
 
                 <div class="tab">
                     <button id="btn1" class="tablinks" onclick="clientFormOpen()">사용자</button>
@@ -90,7 +95,8 @@
                         <br>
                         <div class="grid w3-section">
                             <button class="w3-button w3-baemint w3-border" type="submit">로그인</button>
-                            <button class="w3-button w3-baemint w3-border" type="button" onClick="location.href='./memberClient/JoinFormCilent.jsp'">회원가입</button>
+                            <button class="w3-button w3-baemint w3-border" type="button"
+                                onClick="location.href='./memberClient/JoinFormCilent.jsp'">회원가입</button>
                         </div>
                     </form>
                 </div>
@@ -106,7 +112,8 @@
                         <br>
                         <div class="grid w3-section">
                             <button class="w3-button w3-baemint w3-border" type="submit">사장님 로그인</button>
-                            <button class="w3-button w3-baemint w3-border" type="button" onClick="location.href='./memberShop/JoinFormShop.jsp'">가맹점 가입</button>
+                            <button class="w3-button w3-baemint w3-border" type="button"
+                                onClick="location.href='./memberShop/JoinFormShop.jsp'">가맹점 가입</button>
                         </div>
                     </form>
                 </div>
