--- a/WebContent/baemin/sw01_Main.html
+++ b/WebContent/baemin/sw01_Main.html
@@ -139,7 +139,7 @@
             <div class="w3-container">
                 <!--  main content start here!!!----------------------------------------------------------- -->
                 <div class="w3-row">
-                    <div class="w3-col s3 w3-center w3-padding" onclick="go2ShopList(this)">
+                    <div class="w3-col s3 w3-center w3-padding" onclick="go2ShopList("hansik")">
                         <img src="../source/img/hansik.png" alt="한식" max-width="110px"> <input type="hidden"
                             value="한식" />
                     </div>
