--- a/WebContent/memberClient/sw_joinFormClient.html
+++ b/WebContent/memberClient/sw_joinFormClient.html
@@ -101,7 +101,7 @@
 							<input type="text" class="w3-input w3-border" name="tel2" id="tel2" pattern="^\d{3,4}$">
 						</div>
 						<div class="w3-col s4">
-							<input type="text" class="w3-input w3-border" name="tel3" id="tel3" pattern="^\d{3,4}$">
+							<input type="text" class="w3-input w3-border" name="tel3" id="tel3" pattern="^\d{4,4}$">
 						</div>
 					</div>
 					<!-- 주소 .................. -->
@@ -117,8 +117,7 @@
 						<input type="text" name="addr" id="addr" class="w3-input" placeholder="주소" readonly>
 					</div>
 					<div class="w3-row w3-center w3-section">
-						<input type="text" name="addr2" id="addr2" class="w3-input" placeholder="상세주소" pattern="^[가-힣a-zA-Z0-9]{2,20}$"
-							required>
+						<input type="text" name="addr2" id="addr2" class="w3-input" placeholder="상세주소" required>
 					</div>
 					<!-- 버튼 .................. -->
 					<div class="w3-row w3-center w3-section">
@@ -249,42 +248,6 @@
 		}
 	</script>
 
-
 </body>
 
 </html>
-
-정규표현식 for web
-pattern="^[^ .].{3,99}$"
-이메일
-"/^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,4}$/"
-집전화번호
-"/^(070|02|031|032|033|041|042|043|051|052|053|054|055|061|062|063|064)-\d{3,4}-\d{4}$/u"
-휴대폰번호
-"/^(010|011|016|017|018|019)-\d{3,4}-\d{4}$/u"
-우편번호
-"/^\d{3}-?\d{3}$/u"
-아이디
-"/^[a-zA-Z]\w{2,7}$/u"
-주민등록번호
-"/^\d{2}[0-1]\d[0-3]\d-?[1-6]\d{6}$/u"
-only 영문
-"^[a-zA-Z]*$"
-only 한글
-"^[ㄱ-ㅎ가-힣]*$"
-영문 숫자
-"^[a-zA-Z0-9]*$"
-한글 숫자
-"^[ㄱ-ㅎ가-힣0-9]*$"
-파일확장자
-"^\S+.(?i)(txt|pdf|hwp|xls)$"
--->
-
-<!-- 정규 표현식으로 데이터 유효성 검사 : pattern속성으로 설정
-정규표현식
-. : 모든 문자(공백문자 포함) 한개
-^ : 맨앞에 사용해야 하며 시작되는 문자를 뒤에 표기한다.
-[]: 안에 있는 한글자 선택 : [ㄱ-힣] , [a-zA-Z0-9]
-[]안에서 사용되는 ^ : not을 의미한다. [^0-9] 숫자 불가, [^_] : 공백문자 불가.
-{n,m} : 앞에 한문자를 반복 표시해야하는 경우. [a-z]{4, 10} : 소문자 영문자를 4~10자
-$ : 맨 끝에 사용해야 하며 마지막으로 표시되는 문자를 바로 앞에 표기한다.
